--- a/src/Components/Meal/Meal.css
+++ b/src/Components/Meal/Meal.css
@@ -1,15 +1,17 @@
 body {
-    background-color: rgb(123, 105, 105);
+    background-color: white;
 }
 
 .meal-cart {
     background-color: #222020;
-
+    position: relative;
     border-radius: 10px;
     box-sizing: border-box;
     margin: 25px 15px 30px 15px;
-    padding: 10px 5px 15px 5px;
+    padding: 10px 5px 15px 0px;
     text-align: center;
+
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 
 }
 
@@ -17,19 +19,44 @@ body {
     width: 95%;
     margin: 0 auto;
     margin-top: 10px;
-
+    padding-left: 5px;
     border-radius: 10px;
     align-items: center;
     justify-content: center;
 }
 
 .meal-info {
-    color: rgb(202, 197, 197);
+    color: #E2DCC8;
     text-align: left;
-    margin: 10px 10px 10px 20px;
+    margin: 10px 10px 80px 20px;
     box-sizing: border-box;
 }
 
 .meal-info h3 {
     font-size: 21px;
+}
+
+.btn-container {
+    background-color: #393232;
+    bottom: 0;
+}
+
+.add-to-cart {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    background-color: #614124;
+    bottom: 0;
+    width: 100%;
+    height: 48px;
+    border: none;
+    color: #E2DCC8;
+    border-radius: 0px 0px 10px 10px;
+
+
+}
+
+.add-to-cart:hover {
+    background-color: #54381d;
 }
